<resources>
    <string name="app_name">Calculadora de IMC</string>
    <string name="hello_world">Olá Mundo</string>
    <string name="hi_radio">Olá radio button</string>
    <string name="hi_checkbox">Olá checkbox</string>
    <string name="Tittle.TXT">IMC</string>
    <string name="peso_emKG">Peso(82 Kg)</string>
    <string name="altura_cm">Altura(ex: 1,78 m) </string>
    <string name="BTNCalcular">Calcular</string>
    <color name="white">#FFFFFF</color>

</resources>