<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    >

    <TextView
    style="@style/tittle_purple"
    android:text="@string/hello_world"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <TextView
    style="@style/tittle_purple"
    android:text="@string/hello_world"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <RadioButton
    style="@style/tittle_purple"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hi_radio"
    android:textSize="24sp" />

    <CheckBox
    style="@style/tittle_purple"
    android:layout_width="wrap_content"
    android:text="@string/hi_checkbox"
    android:layout_height="wrap_content" />


</LinearLayout>