<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_gravity="start"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tittleTXT"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:text="@string/Tittle.TXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tittle_purple" />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="match_parent"
        android:hint="@string/peso_emKG"
        android:layout_height="wrap_content"
        style="@style/input_style" />

    <EditText
        android:id="@+id/alturaEDT"
        android:layout_marginTop="36sp"
        android:layout_marginHorizontal="64dp"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/altura_cm"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        style="@style/input_style" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/CalcularBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Holo_Blue"
        android:text="@string/BTNCalcular"
        android:textSize="16sp"
        android:layout_marginTop="45dp" />



</LinearLayout>